// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component snapshots EmptyState — title + body 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "gap": 8,
      "justifyContent": "center",
      "padding": 32,
    }
  }
  testID="snap.empty"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F7F7F8",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "marginBottom": 8,
        "width": 72,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#6B6B72",
            "fontSize": 36,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    accessibilityRole="header"
    style={
      {
        "color": "#0A0A0B",
        "fontSize": 18,
        "fontWeight": "700",
      }
    }
  >
    No events found
  </Text>
  <Text
    style={
      {
        "color": "#6B6B72",
        "fontSize": 16,
        "maxWidth": 280,
        "textAlign": "center",
      }
    }
  >
    Try a different search term.
  </Text>
</View>
`;

exports[`component snapshots EmptyState — title only 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "gap": 8,
      "justifyContent": "center",
      "padding": 32,
    }
  }
  testID="snap.empty"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F7F7F8",
        "borderRadius": 36,
        "height": 72,
        "justifyContent": "center",
        "marginBottom": 8,
        "width": 72,
      }
    }
  >
    <Text />
  </View>
  <Text
    accessibilityRole="header"
    style={
      {
        "color": "#0A0A0B",
        "fontSize": 18,
        "fontWeight": "700",
      }
    }
  >
    No tickets yet
  </Text>
</View>
`;

exports[`component snapshots EventListItem — default state 1`] = `
<View
  accessibilityLabel="Snapshot Show at Snapshot Venue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#E5E5EA",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "gap": 16,
        "padding": 16,
      },
      false,
    ]
  }
  testID="events.item.evt_snap"
>
  <Image
    accessible={false}
    source={
      {
        "uri": "https://example.com/x.jpg",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F8",
        "borderRadius": 10,
        "height": 88,
        "width": 88,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "700",
          }
        }
      >
        Snapshot Show
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#0A0A0B",
          "fontSize": 16,
          "marginTop": 2,
        }
      }
    >
      Snapshot Artist
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#6B6B72",
          "fontSize": 13,
          "marginTop": 2,
        }
      }
    >
      Snapshot Venue
       · 
      Brooklyn
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 999,
              "paddingHorizontal": 8,
              "paddingVertical": 2,
            },
            {
              "backgroundColor": "#FFB4B4",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "rgba(0,0,0,0.7)",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          Indie Rock
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#6B6B72",
            "flex": 1,
            "fontSize": 13,
          }
        }
      >
        Wed, Jun 12
         · 
        10:00 PM
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "center",
        "minWidth": 60,
      }
    }
  >
    <Text
      style={
        {
          "color": "#6B6B72",
          "fontSize": 10,
          "textTransform": "uppercase",
        }
      }
    >
      from
    </Text>
    <Text
      style={
        {
          "color": "#FF3B5C",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      $45.00
    </Text>
  </View>
</View>
`;

exports[`component snapshots EventListItem — sold out 1`] = `
<View
  accessibilityLabel="Snapshot Show at Snapshot Venue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#E5E5EA",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "gap": 16,
        "padding": 16,
      },
      false,
    ]
  }
  testID="events.item.evt_snap"
>
  <Image
    accessible={false}
    source={
      {
        "uri": "https://example.com/x.jpg",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F8",
        "borderRadius": 10,
        "height": 88,
        "width": 88,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "700",
          }
        }
      >
        Snapshot Show
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#0A0A0B",
          "fontSize": 16,
          "marginTop": 2,
        }
      }
    >
      Snapshot Artist
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#6B6B72",
          "fontSize": 13,
          "marginTop": 2,
        }
      }
    >
      Snapshot Venue
       · 
      Brooklyn
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 999,
              "paddingHorizontal": 8,
              "paddingVertical": 2,
            },
            {
              "backgroundColor": "#FFB4B4",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "rgba(0,0,0,0.7)",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
          Indie Rock
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#6B6B72",
            "flex": 1,
            "fontSize": 13,
          }
        }
      >
        Wed, Jun 12
         · 
        10:00 PM
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "justifyContent": "center",
        "minWidth": 60,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#D7263D",
          "borderRadius": 6,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 11,
            "fontWeight": "700",
            "textTransform": "uppercase",
          }
        }
      >
        Sold out
      </Text>
    </View>
  </View>
</View>
`;

exports[`component snapshots HeroEventCard 1`] = `
<View
  testID="events.heroCard"
>
  <View
    accessibilityLabel="Featured: Snapshot Show"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "backgroundColor": "#F7F7F8",
          "borderRadius": 16,
          "height": 220,
          "marginHorizontal": 16,
          "marginTop": 16,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="events.item.evt_snap"
  >
    <Image
      accessible={false}
      source={
        {
          "uri": "https://example.com/x.jpg",
        }
      }
      style={
        {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      pointerEvents="none"
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "bottom": 0,
          "height": "85%",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    />
    <View
      pointerEvents="none"
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.35)",
          "bottom": 0,
          "height": "60%",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    />
    <View
      pointerEvents="none"
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.55)",
          "bottom": 0,
          "height": "40%",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#FF3B5C",
          "borderRadius": 6,
          "left": 16,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
          "position": "absolute",
          "top": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1,
          }
        }
      >
        FEATURED
      </Text>
    </View>
    <View
      style={
        {
          "bottom": 16,
          "left": 16,
          "position": "absolute",
          "right": 16,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#fff",
            "fontSize": 24,
            "fontWeight": "800",
          }
        }
      >
        Snapshot Show
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "marginTop": 2,
            "opacity": 0.95,
          }
        }
      >
        Snapshot Artist
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "marginTop": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 13,
              "opacity": 0.85,
            }
          }
        >
          Wed, Jun 12
        </Text>
        <Text
          style={
            {
              "color": "#fff",
              "opacity": 0.7,
            }
          }
        >
          ·
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#fff",
              "fontSize": 13,
              "opacity": 0.85,
            }
          }
        >
          Brooklyn
        </Text>
        <View
          style={
            {
              "flex": 1,
            }
          }
        />
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          $45.00
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`component snapshots OfflineBanner — hidden when forceError !== offline 1`] = `null`;

exports[`component snapshots OfflineBanner — visible when forceError === offline 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#D7263D",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 4,
    }
  }
  testID="app.offlineBanner"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        undefined,
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontSize": 13,
        "fontWeight": "600",
      }
    }
  >
    You're offline. Some features won't work.
  </Text>
</View>
`;
